--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/hotel_frontend/node_modules/
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+
+lib/
 
 # production
 /build
